Fix potential bugs and remove unneeded code